REGRESSION(r121296): New zero-size background tests asserting on Mac. <http://webkit.org/b/90071>

Reviewed by Dan Bernstein.

Remove ASSERT(patternTransform.isInvertible()) as this is now a valid scenario.

* platform/graphics/cg/ImageCG.cpp:
(WebCore::Image::drawPattern):


Canonical link: https://commits.webkit.org/107916@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@121347 268f45cc-cd09-0410-ab3c-d52691b4dbfc